# subscheck-singbox

./: .env  .env.example  .gitignore  README-en.md  README.md  config.example.yaml  config.yaml  env.example  go.mod  init.go  install.sh  main.go  main.py  pyproject.toml  requirements.txt  run.sh  subscription.txt
app/: app.go  config.go  server.go
app/templates/: admin.html
assets/: assets.go
check/: check.go
check/platform/: speed.go
core/: __init__.py  go_bridge.py  singbox_runner.py  xray_runner.py
docs/: DEBUGGING_WINDOWS.md  PROJECT_STRUCTURE_REORGANIZATION.md  PYTHON_ENHANCEMENTS.md  QUICK_START.md  README.md  SINGBOX_INTEGRATION.md  STATUS_REPORT.md  TROUBLESHOOTING.md  VPS_DEPLOYMENT.md  VPS_OPTIMIZATION_SUMMARY.md  XRAY_CLEANUP_REPORT.md
parsers/: __init__.py  base_parser.py  clash_parser.py
proxy/: get.go  info.go
save/: save.go
save/method/: cloudflare_r2.go  gist.go  local.go  minio.go  minio_test.go  webdav.go
temp_subscheck/: temp_nodes.txt
testers/: __init__.py  direct_proxy_tester.py  node_tester.py
utils/: __init__.py  callback.go  concurrent_tester.py  config_utils.py  config_watcher.py  ip_checker.py  logger.py  notify.go  platform_checker.py  rate_limiter.py  resource_manager.py  scheduler.py  stats_monitor.py  subscription_backup.py  substore.go  updatesubs.go  uploader.py
